Fix footer site item alignment issues on mobile; remove gap above "services" in homepage list of contents

--- a/assets/_scss/components/_component.site-footer.scss
+++ b/assets/_scss/components/_component.site-footer.scss
@@ -83,7 +83,8 @@ body {
 .site-items {
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   @include trailing-border(1px);
-  margin: 0 -15px 21px;
+  list-style-type: none;
+  margin: 0 0 21px;
   padding-bottom: rhythm(3);
   padding-top: rhythm(3);
 
